--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -2,9 +2,11 @@
 @define-color bg_color #fafafa;
 @define-color fg_color #555555;
 @define-color base_color #fefefe;
+@define-color light_color #7a8593;
+@define-color dark_color #63717e;
 @define-color text_color #333333;
 @define-color selected_bg_color transparent;
-@define-color selected_fg_color #df253f;
+@define-color selected_fg_color #c758d8;
 @define-color tooltip_bg_color #fefefe;
 @define-color tooltip_fg_color #2d2d2d;
 
@@ -39,15 +41,15 @@
 
 /* widget colors */
 @define-color button_bg_color #464646;
-@define-color menubar_bg_color @theme_text_color;
+@define-color menubar_bg_color @light_color;
 @define-color menubar_fg_color @theme_bg_color;
 @define-color toolbar_bg_color @theme_bg_color;
-@define-color toolbar_fg_color @theme_text_color;
-@define-color menu_bg_color shade(@theme_text_color, 0.87);
+@define-color toolbar_fg_color @light_color;
+@define-color menu_bg_color shade(@light_color, 0.87);
 @define-color menu_fg_color @theme_bg_color;
 @define-color panel_bg_color #222222;
 @define-color panel_fg_color #f2f2f2;
-@define-color menu_selected_fg_color shade(shade(mix(#ff0000, #df253f, 0.75), 1.35), 0.95);
+@define-color menu_selected_fg_color #eeeeee;
 
 /* osd */
 @define-color osd_base #fafafa;
@@ -55,9 +57,9 @@
 @define-color osd_bg #fafafa;
 
 /* window manager colors */
-@define-color wm_bg @menubar_bg_color;
-@define-color wm_border_focused @menubar_bg_color;
-@define-color wm_border_unfocused shade(@menubar_bg_color, 1.0);
+@define-color wm_bg @dark_color;
+@define-color wm_border_focused @dark_color;
+@define-color wm_border_unfocused shade(@dark_color, 1.05);
 @define-color wm_title_focused @menubar_fg_color;
 @define-color wm_title_unfocused alpha(@menubar_fg_color, 0.75);
 @define-color wm_icons_focused @theme_fg_color;
