--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1,15 +1,14 @@
 /* default color scheme */
-@define-color bg_color #fafafa;
+@define-color bg_color #f5f5f5;
 @define-color fg_color #777777;
 @define-color base_color #fefefe;
-@define-color light_color #e3e3e3;
-/* #7a8593 #6a7583 */
-@define-color dark_color #63717e;
-@define-color text_color #606060;
-@define-color light_text_color #c3c3c3;
+@define-color light_color #dfdfdf;
+@define-color dark_color #5a696d;
+@define-color text_color #808080;
+@define-color light_text_color #cfcfcf;
 @define-color selected_bg_color transparent;
 @define-color selected_fg_color #e758da;
-@define-color light_selected #e758da;
+@define-color light_selected #ffaaff;
 @define-color tooltip_bg_color #fefefe;
 @define-color tooltip_fg_color #2d2d2d;
 
@@ -62,14 +61,14 @@
 
 /* window manager colors */
 @define-color wm_bg @dark_color;
-@define-color wm_border_focused @light_color;
+@define-color wm_border_focused @dark_color;
 @define-color wm_border_unfocused @light_color;
 @define-color wm_title_focused #ffffff;
-@define-color wm_title_unfocused alpha(@text_color, 0.75);
-@define-color wm_icons_focused @theme_fg_color;
-@define-color wm_icons_focused_prelight #ff90ff;
-@define-color wm_icons_focused_pressed #ff90ff;
-@define-color wm_icons_unfocused alpha(@text_color, 0.95);
+@define-color wm_title_unfocused @text_color;
+@define-color wm_icons_focused #ffffff;
+@define-color wm_icons_focused_prelight @light_selected;
+@define-color wm_icons_focused_pressed @light_selected;
+@define-color wm_icons_unfocused @text_color;
 @define-color wm_icons_unfocused_prelight @light_selected;
 @define-color wm_icons_unfocused_pressed @light_selected;
 
