--- a/gtk-3.0/scss/_global.scss
+++ b/gtk-3.0/scss/_global.scss
@@ -54,8 +54,8 @@ $lightdm_bg_color: $dark_bg_color;
 $lightdm_fg_color: $dark_fg_color;
 
 $wm_bg: $titlebar_bg_color;
-$wm_border_focused: mix(shade($titlebar_bg_color, 0.7), $titlebar_fg_color, 0.21);
-$wm_border_unfocused: mix(shade($titlebar_bg_color, 0.7), $titlebar_fg_color, 0.12);
+$wm_border_focused: rgba(0,0,0,0.1);
+$wm_border_unfocused: rgba(0,0,0,0.05);
 $wm_title_focused: mix($titlebar_fg_color, $titlebar_bg_color, 0.1);
 $wm_title_unfocused: mix($titlebar_fg_color, $titlebar_bg_color, 0.4);
 $wm_icons_focused: mix($titlebar_fg_color, $titlebar_bg_color, 0.1);
@@ -68,5 +68,5 @@ $wm_icons_unfocused_pressed: shade($selected_bg_color, 0.8);
 // widget styles
 $roundness: 3px;
 $spacing: 5px;
-$gradient: 0;
+$gradient: 0.05;
 $contrast: .8;
