--- a/gtk-3.0/scss/widgets/_toggle.scss
+++ b/gtk-3.0/scss/widgets/_toggle.scss
@@ -74,8 +74,9 @@
 		outline-offset: -4px;
 
 		&.slider {
+			@include linear-gradient(shade($bg_color, 1.2));
+
 			border: 1px solid border_normal($bg_color);
-			background-color: shade($bg_color, 1.08);
 
 			&:insensitive {
 				border-color: border_insensitive($bg_color);
@@ -84,19 +85,22 @@
 		}
 
 		&.trough {
+			@include linear-gradient(shade($bg_color, .95), to top);
+
 			border: 1px solid border_normal($bg_color);
-			background-color: shade($bg_color, 0.95);
 			color: $fg_color;
 
 			&:active {
+			    @include linear-gradient($selected_bg_color, to top);
+
 				border-color: shade($selected_bg_color, 0.9);
-				background-color: $selected_bg_color;
 				color: $selected_fg_color;
 			}
 
 			&:insensitive {
+			    @include linear-gradient(shade($bg_color, .9), to top);
+
 				border-color: border_insensitive($bg_color);
-				background-color: shade($bg_color, 0.9);
 				color: mix($fg_color, $bg_color, 0.5);
 			}
 		}
