--- a/gtk-3.0/scss/_global.scss
+++ b/gtk-3.0/scss/_global.scss
@@ -35,14 +35,14 @@ $error_color: #cc0000;
 $toolbar_bg_color: $bg_color;
 $toolbar_fg_color: $fg_color;
 
-$titlebar_bg_color: $bg_color;
+$titlebar_bg_color: fade-out($bg_color, .3);
 $titlebar_fg_color: $fg_color;
 
 $menu_bg_color: $base_color;
 $menu_fg_color: $text_color;
 
-$menubar_bg_color: $dark_bg_color;
-$menubar_fg_color: $dark_fg_color;
+$menubar_bg_color: $bg_color;
+$menubar_fg_color: $fg_color;
 
 $panel_bg_color: $dark_bg_color;
 $panel_fg_color: $dark_fg_color;
