--- a/gtk-3.0/scss/widgets/_base.scss
+++ b/gtk-3.0/scss/widgets/_base.scss
@@ -66,7 +66,7 @@
 }
 
 .background {
-	background-color: $bg_color;
+	background-color: fade-out($bg_color, .3);
 	color: $fg_color;
 
 	&:backdrop {
