Changed accent color to puprle

--- a/gtk-3.0/scss/_global.scss
+++ b/gtk-3.0/scss/_global.scss
@@ -5,7 +5,8 @@ $bg_color: #f6f6f6;
 $fg_color: #555;
 $base_color: #fff;
 $text_color: #333;
-$selected_bg_color: #11aa89;
+$selected_bg_color: #7e57c2;
+$selected_bg_color_alt: #11aa89;
 $selected_fg_color: #fff;
 $tooltip_bg_color: #333;
 $tooltip_fg_color: #eee;
