--- a/gtk-3.0/scss/widgets/_button.scss
+++ b/gtk-3.0/scss/widgets/_button.scss
@@ -118,7 +118,7 @@
 	@include linear-gradient(shade($bg, 1.2));
 	@extend %button;
 
-	color: alpha($fg, .8);
+	color: $fg;
 	box-shadow: 0 1px 2px -1px alpha($dark_shadow, .3);
 
 	&:insensitive {
