--- a/gtk-3.0/scss/widgets/_button.scss
+++ b/gtk-3.0/scss/widgets/_button.scss
@@ -95,7 +95,8 @@
 
 	&:insensitive { box-shadow: inset -1px 0 shade($bg, 0.8); }
 
-	&:last-child, &:only-child,
+	&:last-child, &:only-child { box-shadow: 0 1px 2px -1px alpha($dark_shadow, .5); }
+
 	&:insensitive:last-child, &:insensitive:only-child,
 	&:active:insensitive:last-child, &:active:insensitive:only-child,
 	&:checked:insensitive:last-child, &:checked:insensitive:only-child { box-shadow: none; }
