--- a/gtk-3.0/scss/widgets/_scrollbar.scss
+++ b/gtk-3.0/scss/widgets/_scrollbar.scss
@@ -31,7 +31,7 @@
 
 		&.slider, &.slider.vertical {
 			border: none;
-			border-radius: 4px;
+			border-radius: $roundness;
 			background-color: mix($bg_color, $fg_color, 0.21);
 
 			&:hover { background-color: mix($bg_color, $fg_color, 0.31); }
