--- a/gtk-3.0/scss/widgets/_sidebar.scss
+++ b/gtk-3.0/scss/widgets/_sidebar.scss
@@ -39,7 +39,7 @@
                 border: none;
                 background-image: none;
                 background-color: shade($bg_color, 0.95);
-                color: $fg_color;
+                color: $selected_bg_color_alt;
             }
         }
 
