--- a/gtk-3.0/scss/widgets/_button.scss
+++ b/gtk-3.0/scss/widgets/_button.scss
@@ -135,11 +135,12 @@
 		&:focus, &:hover {
 			@include linear-gradient(shade($bg, 1.2));
 
+			color: $selected_bg_color_alt;
 			box-shadow: 0 1px 3px -1px alpha($dark_shadow, .5);
 		}
 
 		&:checked, &:active {
-			@include linear-gradient(shade($bg, .95), to top);
+			@include linear-gradient(shade($bg, .9), to top);
 
 			box-shadow: inset 1px 0 alpha($dark_shadow, .07),
 						inset 0 1px alpha($dark_shadow, .08),
