--- a/gtk-3.0/scss/widgets/_button.scss
+++ b/gtk-3.0/scss/widgets/_button.scss
@@ -126,12 +126,6 @@
 	&:focus, &:hover {
 		@include linear-gradient(shade($bg, 1.2));
 
-		@if $bg == $selected_bg_color {
-			color: $fg;
-		} @else {
-			color: $selected_bg_color_alt;
-		}
-
 		box-shadow: 0 1px 3px -1px alpha($dark_shadow, .5);
 	}
 
@@ -143,6 +137,16 @@
 					inset 0 1px alpha($dark_shadow, .08),
 					inset -1px 0 alpha($dark_shadow, .07),
 					inset 0 -1px alpha($dark_shadow, .05);
+	}
+
+	&:focus, &:hover,
+	&:active:focus, &:active:hover,
+	&:checked:focus, &:checked:hover {
+		@if $bg == $selected_bg_color {
+			color: $fg;
+		} @else {
+			color: $selected_bg_color_alt;
+		}
 	}
 
 	&:active:insensitive, &:checked:insensitive {
@@ -164,7 +168,6 @@
 		&:checked, &:active,
 		&:active:insensitive, &:checked:insensitive,
 		&:insensitive {
-			color: $fg;
 			border-color: transparent;
 			background-color: transparent;
 			background-image: none;
