--- a/gtk-3.0/scss/widgets/_sidebar.scss
+++ b/gtk-3.0/scss/widgets/_sidebar.scss
@@ -35,12 +35,7 @@
                 }
             }
 
-            &:prelight {
-                border: none;
-                background-image: none;
-                background-color: shade($bg_color, 1.05);
-                color: $selected_bg_color_alt;
-            }
+            &:prelight { color: $selected_bg_color_alt; }
         }
 
         .frame { border-width: 0; }
