--- a/gtk-3.0/scss/widgets/_toggle.scss
+++ b/gtk-3.0/scss/widgets/_toggle.scss
@@ -76,11 +76,13 @@
 		&.slider {
 			@include linear-gradient(shade($bg_color, 1.2));
 
-			border: 1px solid border_normal($bg_color);
+			border: 1px solid rgba(0,0,0,0.2);
+			box-shadow: 0 1px 2px -1px alpha($dark_shadow, .3);
 
 			&:insensitive {
-				border-color: border_insensitive($bg_color);
+				border-color: rgba(0,0,0,0.1);
 				background-color: shade($bg_color, 0.9);
+				box-shadow: none;
 			}
 		}
 
@@ -89,6 +91,10 @@
 
 			border: 1px solid border_normal($bg_color);
 			color: $fg_color;
+			box-shadow: inset 1px 0 alpha($dark_shadow, .07),
+						inset 0 1px alpha($dark_shadow, .08),
+						inset -1px 0 alpha($dark_shadow, .07),
+						inset 0 -1px alpha($dark_shadow, .05);
 
 			&:active {
 			    @include linear-gradient($selected_bg_color, to top);
