--- a/gtk-3.0/scss/widgets/_button.scss
+++ b/gtk-3.0/scss/widgets/_button.scss
@@ -123,52 +123,54 @@
 	color: $fg;
 	box-shadow: 0 1px 2px -1px alpha($dark_shadow, .3);
 
-	&:focus, &:hover {
-		@include linear-gradient(shade($bg, 1.2));
-		@include border(rgba(0,0,0,0.2));
-
-		box-shadow: 0 1px 3px -1px alpha($dark_shadow, .5);
-	}
-
-	&:active, &:checked {
-		@include linear-gradient(shade($bg, .9), to top);
-
-		color: $fg;
-		box-shadow: inset 1px 0 alpha($dark_shadow, .07),
-					inset 0 1px alpha($dark_shadow, .08),
-					inset -1px 0 alpha($dark_shadow, .07),
-					inset 0 -1px alpha($dark_shadow, .05);
-	}
-
-	&:focus, &:hover,
-	&:active:focus, &:active:hover,
-	&:checked:focus, &:checked:hover {
-		@if $bg == $selected_bg_color {
-			color: $fg;
-		} @else {
-			color: $selected_bg_color_alt;
-		}
-	}
-
-	&:active:insensitive, &:checked:insensitive {
-		@include linear-gradient(shade($bg, .8));
-
-		color: $fg;
-		box-shadow: none;
-	}
-
-	&:insensitive {
-		@include linear-gradient(shade($bg, .95));
-
-		color: mix($bg, $fg, .5);
-		box-shadow: none;
-	}
-
 	&.flat {
 		border-color: transparent;
 		background-color: transparent;
 		background-image: none;
 		box-shadow: none;
+	}
+
+	&, &.flat {
+		&:focus, &:hover {
+			@include linear-gradient(shade($bg, 1.2));
+			@include border(rgba(0,0,0,0.2));
+
+			box-shadow: 0 1px 3px -1px alpha($dark_shadow, .5);
+		}
+
+		&:active, &:checked {
+			@include linear-gradient(shade($bg, .9), to top);
+
+			color: $fg;
+			box-shadow: inset 1px 0 alpha($dark_shadow, .07),
+						inset 0 1px alpha($dark_shadow, .08),
+						inset -1px 0 alpha($dark_shadow, .07),
+						inset 0 -1px alpha($dark_shadow, .05);
+		}
+
+		&:focus, &:hover,
+		&:active:focus, &:active:hover,
+		&:checked:focus, &:checked:hover {
+			@if $bg == $selected_bg_color {
+				color: $fg;
+			} @else {
+				color: $selected_bg_color_alt;
+			}
+		}
+
+		&:active:insensitive, &:checked:insensitive {
+			@include linear-gradient(shade($bg, .8));
+
+			color: $fg;
+			box-shadow: none;
+		}
+
+		&:insensitive {
+			@include linear-gradient(shade($bg, .95));
+
+			color: mix($bg, $fg, .5);
+			box-shadow: none;
+		}
 	}
 
 	&.separator, .separator {
