--- a/gtk-3.0/scss/widgets/_menu.scss
+++ b/gtk-3.0/scss/widgets/_menu.scss
@@ -50,7 +50,7 @@
     #toolbar-popup, .menu {
         padding: 0;
         border-radius: 0;
-        border-style: none;
+        border: none;
         background-color: $menu_bg_color;
         color: $menu_fg_color;
 
