--- a/gtk-3.0/scss/widgets/_toolbar.scss
+++ b/gtk-3.0/scss/widgets/_toolbar.scss
@@ -37,7 +37,7 @@
 
         &.text-button { padding:  $spacing; }
 
-        &.image-button { padding: $spacing ($spacing - 1px) ($spacing - 1px) $spacing; }
+        &.image-button { padding: ($spacing + 1px) ($spacing - 1px) ($spacing + 1px) $spacing; }
     }
 
     GtkSeparatorToolItem, .separator, .separator:insensitive {
