--- a/gtk-3.0/scss/_global.scss
+++ b/gtk-3.0/scss/_global.scss
@@ -39,7 +39,7 @@ $toolbar_fg_color: $fg_color;
 $titlebar_bg_color: alpha($bg_color, .8);
 $titlebar_fg_color: $fg_color;
 
-$menu_bg_color: alpha($base_color, .8);
+$menu_bg_color: $base_color;
 $menu_fg_color: $text_color;
 
 $menubar_bg_color: alpha($bg_color, .8);
