--- a/gtk-3.0/scss/widgets/_button.scss
+++ b/gtk-3.0/scss/widgets/_button.scss
@@ -75,53 +75,54 @@
 @mixin linked_button($bg) {
 	@extend %linked_button;
 
-	box-shadow: inset -1px 0 border_normal(rgba(0,0,0,0.1)),
-				0 1px 2px -1px alpha($dark_shadow, .3);
+	box-shadow: inset -1px 0 border_normal(rgba(0,0,0,0.12)),
+				0 1px 2px -1px alpha($dark_shadow, .12);
 
 	&:focus, &:hover {
-		box-shadow: inset -1px 0 border_focus(rgba(0,0,0,0.1)),
-					0 1px 2px -1px alpha($dark_shadow, .5);
+		box-shadow: inset -1px 0 border_focus(rgba(0,0,0,0.12)),
+					0 1px 2px -1px alpha($dark_shadow, .32);
 	}
 
 	&:active, &:active:hover,
 	&:active:focus, &:active:hover:focus,
 	&:checked, &:checked:hover,
 	&:checked:focus, &:checked:hover:focus {
-		box-shadow: inset -1px 0 border_active(rgba(0,0,0,0.1)),
-					inset 1px 0 alpha($dark_shadow, .07),
-					inset 0 1px alpha($dark_shadow, .08),
+		box-shadow: inset -1px 0 border_active(rgba(0,0,0,0.12)),
+					inset 0 1px alpha($dark_shadow, .07),
 					inset 0 -1px alpha($dark_shadow, .05);
 	}
 
 	&:insensitive { box-shadow: inset -1px 0 shade($bg, 0.8); }
 
-	&:last-child, &:only-child { box-shadow: 0 1px 2px -1px alpha($dark_shadow, .5); }
+	&:last-child, &:only-child { box-shadow: 0 1px 2px -1px alpha($dark_shadow, .12); }
+
+	&:last-child:hover, &:only-child:hover { box-shadow: 0 1px 2px -1px alpha($dark_shadow, .32); }
 
 	&:insensitive:last-child, &:insensitive:only-child,
 	&:active:insensitive:last-child, &:active:insensitive:only-child,
 	&:checked:insensitive:last-child, &:checked:insensitive:only-child { box-shadow: none; }
 
-	&:active:last-child, &:active:only-child,
-	&:active:last-child:focus, &:active:only-child:focus,
-	&:active:last-child:hover, &:active:only-child:hover,
-	&:active:last-child:hover:focus, &:active:only-child:hover:focus,
-	&:checked:last-child, &:checked:only-child,
-	&:checked:last-child:focus, &:checked:only-child:focus,
-	&:checked:last-child:hover, &:checked:only-child:hover,
-	&:checked:last-child:hover:focus, &:checked:only-child:hover:focus {
-		box-shadow: inset 1px 0 alpha($dark_shadow, .07),
-					inset 0 1px alpha($dark_shadow, .08),
-					inset -1px 0 alpha($dark_shadow, .07);
+	&:active:last-child, &:active:last-child:focus, &:active:last-child:hover, &:active:last-child:hover:focus,
+	&:checked:last-child, &:checked:last-child:focus, &:checked:last-child:hover, &:checked:last-child:hover:focus, {
+		box-shadow: inset 0 1px alpha($dark_shadow, .07),
+					inset -1px 0 alpha($dark_shadow, .06);
+	}
+
+	&:active:only-child, &:active:only-child:focus, &:active:only-child:hover, &:active:only-child:hover:focus,
+	&:checked:only-child, &:checked:only-child:focus, &:checked:only-child:hover, &:checked:only-child:hover:focus {
+		box-shadow: inset 1px 0 alpha($dark_shadow, .06),
+					inset 0 1px alpha($dark_shadow, .07),
+					inset -1px 0 alpha($dark_shadow, .06);
 	}
 }
 
 @mixin button($bg, $fg) {
 	@extend %button;
 	@include linear-gradient(shade($bg, 1.2));
-	@include border(rgba(0,0,0,0.15));
+	@include border(rgba(0,0,0,0.12));
 
 	color: $fg;
-	box-shadow: 0 1px 2px -1px alpha($dark_shadow, .3);
+	box-shadow: 0 1px 2px -1px alpha($dark_shadow, .12);
 
 	&.flat {
 		border-color: transparent;
@@ -135,16 +136,16 @@
 			@include linear-gradient(shade($bg, 1.2));
 			@include border(rgba(0,0,0,0.2));
 
-			box-shadow: 0 1px 3px -1px alpha($dark_shadow, .5);
+			box-shadow: 0 1px 2px -1px alpha($dark_shadow, .32);
 		}
 
 		&:active, &:checked {
 			@include linear-gradient(shade($bg, .9), to top);
 
 			color: $fg;
-			box-shadow: inset 1px 0 alpha($dark_shadow, .07),
-						inset 0 1px alpha($dark_shadow, .08),
-						inset -1px 0 alpha($dark_shadow, .07),
+			box-shadow: inset 1px 0 alpha($dark_shadow, .06),
+						inset 0 1px alpha($dark_shadow, .07),
+						inset -1px 0 alpha($dark_shadow, .06),
 						inset 0 -1px alpha($dark_shadow, .05);
 		}
 
