Add some spacing to scrollbar through

--- a/gtk-3.0/scss/widgets/_misc.scss
+++ b/gtk-3.0/scss/widgets/_misc.scss
@@ -34,7 +34,7 @@
 @include exports("dialogs") {
 	GtkMessageDialog, .message-dialog, .prompt {
 		-GtkDialog-content-area-border: 0;
-		-GtkDialog-action-area-border: 0;
+		-GtkDialog-action-area-border: $spacing;
 		-GtkDialog-button-spacing: 0;
 
 		margin: 0;
