--- a/gtk-3.0/scss/widgets/_entry.scss
+++ b/gtk-3.0/scss/widgets/_entry.scss
@@ -40,7 +40,7 @@
 				inset 0 1px alpha($dark_shadow, .12),
 				inset -1px 0 alpha($dark_shadow, .1),
 				inset 0 -1px alpha($dark_shadow, .05),
-				0 1px 2px -1px rgba(0,0,0,0.1);
+				0 1px 2px -1px rgba(0,0,0,.12);
 
     &:focus, &:hover, &:active { transition: none; }
 
