--- a/gtk-3.0/scss/widgets/_notebook.scss
+++ b/gtk-3.0/scss/widgets/_notebook.scss
@@ -27,10 +27,10 @@
 
 		&.header {
 			border-width: 0;
-			background-color: shade($base_color, 0.85);
+			background-color: shade($base_color, .9);
 
 			&.frame {
-				border-color: shade($base_color, 0.75);
+				border-color: border_normal($base_color);
 
 				&.top { border-width: 1px 1px 0 1px; }
 
@@ -49,55 +49,45 @@
 		}
 
 		tab {
-			padding: $spacing ($spacing * 2);
+			padding: ($spacing + 1px) ($spacing * 2);
 			border: 1px solid transparent;
 			background-color: transparent;
 			background-image: none;
 
+			&:hover {
+				background-color: shade($base_color, .95);
+				border-color: shade($base_color, .8);
+			}
+
 			&:active {
-				background-color: transparent;
+				background-color: $base_color;
 				background-image: none;
+				border-color: shade($base_color, .85);
 			}
 
 			&.top {
-				border-bottom-width: 2px;
+				border-bottom-width: 0;
 				border-bottom-right-radius: 0;
 				border-bottom-left-radius: 0;
-
-				&:hover { border-bottom-color: alpha($selected_bg_color, 0.3); }
-
-				&:active { border-bottom-color: $selected_bg_color; }
 			}
 
 			&.right {
-				border-left-width: 2px;
+				border-left-width: 0;
 				border-bottom-left-radius: 0;
 				border-top-left-radius: 0;
-
-				&:hover { border-left-color: alpha($selected_bg_color, 0.3); }
-
-				&:active { border-left-color: $selected_bg_color; }
 			}
 
 
 			&.bottom {
-				border-top-width: 2px;
+				border-top-width: 0;
 				border-top-right-radius: 0;
 				border-top-left-radius: 0;
-
-				&:hover { border-top-color: alpha($selected_bg_color, 0.3); }
-
-				&:active { border-top-color: $selected_bg_color; }
 			}
 
 			&.left {
-				border-right-width: 2px;
+				border-right-width: 0;
 				border-top-right-radius: 0;
 				border-bottom-right-radius: 0;
-
-				&:hover { border-right-color: alpha($selected_bg_color, 0.3); }
-
-				&:active { border-right-color: $selected_bg_color; }
 			}
 
 			GtkLabel { color: mix($text_color, $base_color, 0.3); }
