--- a/gtk-3.0/scss/widgets/_entry.scss
+++ b/gtk-3.0/scss/widgets/_entry.scss
@@ -36,11 +36,8 @@
 	border-style: solid;
 	border-radius: $roundness;
 	transition: border 150ms ease;
-	box-shadow: inset 1px 0 alpha($dark_shadow, .1),
-				inset 0 1px alpha($dark_shadow, .12),
-				inset -1px 0 alpha($dark_shadow, .1),
-				inset 0 -1px alpha($dark_shadow, .05),
-				0 1px 2px -1px rgba(0,0,0,.12);
+	box-shadow: inset 1px 1px alpha($dark_shadow, .06),
+				inset -1px 0 alpha($dark_shadow, .06);
 
     &:focus, &:hover, &:active { transition: none; }
 
@@ -65,9 +62,11 @@
 @mixin entry($bg, $fg) {
 	@extend %entry;
 	@include linear-gradient($bg, to top);
-	@include border(shade($bg, .9));
+	@include border($bg);
 
 	color: $fg;
+
+	&:focus, &:active { border-color: $selected_bg_color; }
 
 	&:insensitive {
 	    @include linear-gradient(shade($bg, .9), to top);
