--- a/gtk-3.0/scss/_global.scss
+++ b/gtk-3.0/scss/_global.scss
@@ -20,18 +20,18 @@ $dark_shadow: #000;
 $light_shadow: #fff;
 
 // misc colors used by gtk+
-$info_fg_color: #3986ac;
-$info_bg_color: #d9edf7;
-$warning_fg_color: #c09853;
-$warning_bg_color: #fcf8e3;
-$question_fg_color: #d64937;
-$question_bg_color: #fce5d5;
-$error_fg_color: #b94a48;
-$error_bg_color: #f2dede;
-$link_color: #fc6f5d;
-$success_color: #53a93f;
-$warning_color: #f57900;
-$error_color: #cc0000;
+$info_fg_color: #fff;
+$info_bg_color: #03a9f4;
+$warning_fg_color: #fff;
+$warning_bg_color: #ef6c00;
+$question_fg_color: #fff;
+$question_bg_color: #673ab7;
+$error_fg_color: #fff;
+$error_bg_color: #f44336;
+$link_color: #3f51b5;
+$success_color: #4caf50;
+$warning_color: #ef6c00;
+$error_color: #f44336;
 
 $toolbar_bg_color: alpha($bg_color, .8);
 $toolbar_fg_color: $fg_color;
