--- a/gtk-3.0/scss/widgets/_sidebar.scss
+++ b/gtk-3.0/scss/widgets/_sidebar.scss
@@ -3,6 +3,8 @@
 **********/
 
 @include exports("sidebar") {
+    * { -GtkPaned-handle-size: 4; }
+
     .sidebar {
         &, &.view, & .view, & GtkScrolledWindow {
             background-color: $bg_color;
