--- a/gtk-3.0/scss/widgets/_base.scss
+++ b/gtk-3.0/scss/widgets/_base.scss
@@ -58,7 +58,7 @@
 		icon-shadow: none;
 	}
 
-	&.csd { background-color: alpha($bg_color, .95); }
+	&.csd { background-color: $bg_color; }
 }
 
 .gtkstyle-fallback {
