--- a/gtk-3.0/scss/widgets/_button.scss
+++ b/gtk-3.0/scss/widgets/_button.scss
@@ -2,6 +2,7 @@
  ! Buttons
 **********/
 
+$border_strength: if($variant == "dark", .1, 0);
 $shadow_strength: if($variant == "dark", .3, 0);
 
 @include exports("button_extends") {
@@ -77,11 +78,11 @@ $shadow_strength: if($variant == "dark", .3, 0);
 @mixin linked_button($bg) {
 	@extend %linked_button;
 
-	box-shadow: inset -1px 0 border_normal(rgba(0,0,0,0.12)),
+	box-shadow: inset -1px 0 border_normal(rgba(0,0,0,.12 + $border_strength)),
 				0 1px 2px -1px alpha($dark_shadow, .12 + $shadow_strength);
 
 	&:focus, &:hover {
-		box-shadow: inset -1px 0 border_focus(rgba(0,0,0,0.12)),
+		box-shadow: inset -1px 0 border_focus(rgba(0,0,0,.12 + $border_strength)),
 					0 1px 2px -1px alpha($dark_shadow, .32 + $shadow_strength);
 	}
 
@@ -89,12 +90,12 @@ $shadow_strength: if($variant == "dark", .3, 0);
 	&:active:focus, &:active:hover:focus,
 	&:checked, &:checked:hover,
 	&:checked:focus, &:checked:hover:focus {
-		box-shadow: inset -1px 0 border_active(rgba(0,0,0,0.12)),
+		box-shadow: inset -1px 0 border_active(rgba(0,0,0,.12 + $border_strength)),
 					inset 0 1px alpha($dark_shadow, .07),
 					inset 0 -1px alpha($dark_shadow, .05);
 	}
 
-	&:insensitive { box-shadow: inset -1px 0 shade($bg, 0.8); }
+	&:insensitive { box-shadow: inset -1px 0 shade($bg, .8); }
 
 	&:last-child, &:only-child { box-shadow: 0 1px 2px -1px alpha($dark_shadow, .12 + $shadow_strength); }
 
@@ -121,7 +122,7 @@ $shadow_strength: if($variant == "dark", .3, 0);
 @mixin button($bg, $fg) {
 	@extend %button;
 	@include linear-gradient(shade($bg, 1.2));
-	@include border(rgba(0,0,0,0.12));
+	@include border(rgba(0,0,0,.12 + $border_strength));
 
 	color: $fg;
 	box-shadow: 0 1px 2px -1px alpha($dark_shadow, .12 + $shadow_strength);
@@ -136,7 +137,7 @@ $shadow_strength: if($variant == "dark", .3, 0);
 	&, &.flat {
 		&:focus, &:hover {
 			@include linear-gradient(shade($bg, 1.2));
-			@include border(rgba(0,0,0,0.2));
+			@include border(rgba(0,0,0,.2 + $border_strength));
 
 			box-shadow: 0 1px 2px -1px alpha($dark_shadow, .32 + $shadow_strength);
 		}
@@ -204,15 +205,15 @@ $shadow_strength: if($variant == "dark", .3, 0);
 		box-shadow: none;
 
 		&:focus, &:hover {
-			border: 1px solid alpha(black, 0.3);
-			background-color: alpha(white, 0.2);
+			border: 1px solid alpha(black, .3);
+			background-color: alpha(white, .2);
 			background-image: none;
 			box-shadow: none;
 		}
 
 		&:active, &:checked, &:active:hover, &:checked:hover  {
-			border: 1px solid alpha(black, 0.3);
-			background-color: alpha(black, 0.1);
+			border: 1px solid alpha(black, .3);
+			background-color: alpha(black, .1);
 			background-image: none;
 			box-shadow: none;
 		}
@@ -226,18 +227,18 @@ $shadow_strength: if($variant == "dark", .3, 0);
 		&.linked, .linked & { @include linked_button(shade($bg_color, 1.2)); }
 
 		.spinbutton & {
-			color: mix($text_color, $base_color, 0.4);
+			color: mix($text_color, $base_color, .4);
 			padding: $spacing ($spacing * 2);
 			border: none;
 			border-radius: 0;
 			border-style: none;
 			background-color: transparent;
 			background-image: none;
-			box-shadow: inset 1px 0 shade($base_color, 0.9);
+			box-shadow: inset 1px 0 shade($base_color, .9);
 
 			&:insensitive {
-				color: mix($text_color, $base_color, 0.7);
-				box-shadow: inset 1px 0 shade($base_color, 0.85);
+				color: mix($text_color, $base_color, .7);
+				box-shadow: inset 1px 0 shade($base_color, .85);
 			}
 
 			&:active, &:checked, &:hover { color: $text_color; }
@@ -249,11 +250,11 @@ $shadow_strength: if($variant == "dark", .3, 0);
 
 			&:last-child { border-radius: 0 $roundness $roundness 0; }
 
-			&:dir(rtl) { box-shadow: inset -1px 0 shade($base_color, 0.9); }
+			&:dir(rtl) { box-shadow: inset -1px 0 shade($base_color, .9); }
 		}
 
 		.spinbutton.vertical & {
-			border: 1px solid shade($bg_color, 0.8);
+			border: 1px solid shade($bg_color, .8);
 			border-radius: $roundness;
 			background-color: shade($bg_color, 1.08);
 			background-image: none;
@@ -261,26 +262,26 @@ $shadow_strength: if($variant == "dark", .3, 0);
 			box-shadow: none;
 
 			&:hover {
-				border-color: shade($bg_color, 0.7);
+				border-color: shade($bg_color, .7);
 				background-color: shade($bg_color, 1.1);
 				background-image: none;
 			}
 
 			&:active, &:checked {
-				border-color: shade($bg_color, 0.8);
-				background-color: shade($bg_color, 0.95);
+				border-color: shade($bg_color, .8);
+				background-color: shade($bg_color, .95);
 				background-image: none;
 			}
 
 			&:active:hover, &:checked:hover {
-				border-color: shade($bg_color, 0.7);
+				border-color: shade($bg_color, .7);
 			}
 
-			&:focus, &:hover:focus, &:active:focus, &:active:hover:focus { border-color: shade($bg_color, 0.7); }
+			&:focus, &:hover:focus, &:active:focus, &:active:hover:focus { border-color: shade($bg_color, .7); }
 
 			&:insensitive {
-				border-color: shade($bg_color, 0.85);
-				background-color: shade($bg_color, 0.9);
+				border-color: shade($bg_color, .85);
+				background-color: shade($bg_color, .9);
 				background-image: none;
 			}
 
@@ -317,7 +318,7 @@ $shadow_strength: if($variant == "dark", .3, 0);
 		> .button {
 			padding: ($spacing - 2px) ($spacing + 1px);
 
-			-GtkComboBox-arrow-scaling: 0.5;
+			-GtkComboBox-arrow-scaling: .5;
 			-GtkComboBox-shadow-type: none;
 		}
 
