Remove background for inline toolbars

--- a/gtk-3.0/scss/widgets/_toolbar.scss
+++ b/gtk-3.0/scss/widgets/_toolbar.scss
@@ -55,6 +55,11 @@
         @include toolbar($bg_color, $fg_color);
 
         border-style: none;
+
+        &.inline-toolbar {
+            background-image: none;
+            background-color: transparent;
+        }
     }
 
     .header-bar {
