Fix black flash on hover on list-row

--- a/gtk-3.0/scss/widgets/_grid.scss
+++ b/gtk-3.0/scss/widgets/_grid.scss
@@ -13,7 +13,7 @@
                 border-radius: 0;
                 padding: $spacing;
                 background-image: none;
-                background-color: transparent;
+                background-color: alpha($bg_color, 0);
                 box-shadow: none;
 
                 &:hover {
