Use green for suggested action

--- a/gtk-3.0/scss/widgets/_actionbar.scss
+++ b/gtk-3.0/scss/widgets/_actionbar.scss
@@ -58,7 +58,7 @@
 
 @include exports("actionbuttons") {
     $types: (
-        suggested: $selected_bg_color,
+        suggested: $success_color,
         destructive: $error-color
     );
 
