GTK3.16: fix right border in nautilus sidebar

--- a/gtk-3.0/scss/apps/_nautilus.scss
+++ b/gtk-3.0/scss/apps/_nautilus.scss
@@ -23,7 +23,7 @@
 
         .sidebar .frame { border: none; }
 
-        > GtkGrid > .pane-separator {
+        GtkPaned {
             border-width: 0 1px 0 0;
             border-style: solid;
 
