Add styles for overshoot and undershoot. Fixes #8

--- a/gtk-3.0/scss/_widgets.scss
+++ b/gtk-3.0/scss/_widgets.scss
@@ -15,6 +15,7 @@
 @import "widgets/misc";
 @import "widgets/notebook";
 @import "widgets/osd";
+@import "widgets/overshoot";
 @import "widgets/progress";
 @import "widgets/scrollbar";
 @import "widgets/sidebar";
