--- a/gtk-3.0/scss/widgets/_sidebar.scss
+++ b/gtk-3.0/scss/widgets/_sidebar.scss
@@ -3,8 +3,6 @@
 **********/
 
 @include exports("sidebar") {
-    * { -GtkPaned-handle-size: 4; }
-
     .sidebar {
         &, &.view, & .view, & GtkScrolledWindow {
             background-color: $bg_color;
@@ -54,7 +52,7 @@
             &:dir(ltr) { border-width: 0 1px 0 0; }
             &:dir(rtl) { border-width: 0 0 0 1px; }
 
-            GtkLabel {
+            .label {
                 padding: $spacing ($spacing * 2);
 
                 &.highlight { background-color: mix($bg_color, $fg_color, 0.80); }
@@ -68,51 +66,38 @@
 }
 
 
-/***************
-! Pane separator
-****************/
+/******
+! Paned
+*******/
 
-@include exports("paneseparator") {
-    .pane-separator {
-        background-color: $bg_color;
-        color: transparent;
+@include exports("paned") {
+    GtkPaned {
+        -GtkPaned-handle-size: 1;
+        -gtk-icon-source: none;
 
-        &, &.horizontal {
-            background-image: linear-gradient(to bottom,
-                                shade($bg_color, 0.8) 0%,
-                                shade($bg_color, 0.8) 20%,
-                                transparent 20%,
-                                transparent 40%,
-                                shade($bg_color, 0.8) 40%,
-                                shade($bg_color, 0.8) 60%,
-                                transparent 60%,
-                                transparent 80%,
-                                shade($bg_color, 0.8) 80%,
-                                shade($bg_color, 0.8)
-                            );
-
-            background-size: 4px 10px;
-            background-repeat: no-repeat;
-            background-position: center center;
-        }
-
-        &.vertical {
-            background-image: linear-gradient(to right,
-                                shade($bg_color, 0.8) 0%,
-                                shade($bg_color, 0.8) 20%,
-                                transparent 20%,
-                                transparent 45%,
-                                shade($bg_color, 0.8) 45%,
-                                shade($bg_color, 0.8) 55%,
-                                transparent 55%,
-                                transparent 80%,
-                                shade($bg_color, 0.8) 80%,
-                                shade($bg_color, 0.8)
-                            );
-
-            background-size: 10px 4px;
-            background-repeat: no-repeat;
-            background-position: center center;
-        }
+        margin: 0 $spacing;
     }
+
+
+    GtkPaned:dir(rtl) {
+        margin-right: 0;
+        margin-left: $spacing;
+    }
+
+    GtkPaned .pane-separator { background-color: shade($bg_color, 0.9); }
+
+    GtkPaned.wide {
+        -GtkPaned-handle-size: 4;
+
+        margin: 0;
+    }
+
+    GtkPaned.wide .pane-separator {
+        background-color: transparent;
+        border-style: none solid;
+        border-color: shade($bg_color, 0.9);
+        border-width: 1px;
+    }
+
+    GtkPaned.wide.vertical .pane-separator { border-style: solid none; }
 }
