Add style for view

--- a/gtk-3.0/scss/widgets/_menu.scss
+++ b/gtk-3.0/scss/widgets/_menu.scss
@@ -196,9 +196,10 @@
             }
         }
 
-        .list {
+        .view, .list {
             background-color: transparent;
             background-image: none;
+            color: $menu_fg_color;
         }
 
         .list-row {
